# empyrical-reloaded

./: .flake8  .gitignore  CNAME  README.md  codecov.yml  genindex.html  index.html  objects.inv  perf_attrib.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  stats.html  tox.ini  utils.html  versioneer.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_wheels.yml  ci-workflow.yaml  ci_tests.yml  codeql-analysis.yml  conda_package.yml  test_wheels.yml  unit_tests.yml
_static/: documentation_options.js
conda/recipe/: meta.yaml
docs/: Makefile  conf.py  deploy.py
docs/source/: api-reference.rst  conf.py  index.rst  perf_attrib.rst  stats.rst  utils.rst
empyrical/: __init__.py  _version.py  emdd_data.py  perf_attrib.py  stats.py  utils.py
empyrical/tests/: test_perf_attrib.py  test_stats.py
src/empyrical/: _version.py  deprecate.py  stats.py  utils.py
tests/: conftest.py  test_perf_attrib.py  test_stats.py
