[metadata]
name = empyrical-reloaded
url = https://empyrical.ml4trading.io
description = empyrical computes performance and risk statistics commonly used in quantitative finance
long_description_content_type = text/markdown
long_description = file: README.md
license = Apache 2.0
license_file = LICENSE
maintainer = Applied AI, LLC
maintainer email = stefan@applied-ai.com
author = Quantopian Inc
author email = opensource@quantopian.com
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Operating System :: OS Independent

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
versionfile_source = empyrical/_version.py
versionfile_build = empyrical/_version.py
tag_prefix = ""
parentdir_prefix = empyrical-

[options]
python_requires = >=3.7
include_package_data = True
install_requires =
    numpy>=1.9.2
    bottleneck>=1.3.0
    pandas>=1.0.0
    scipy >=0.15.1,<=1.7.3
    pandas-datareader>=0.4
    yfinance>=0.1.63

[options.extras_require]
all =
    %(doc)s
    %(dev)s
    %(test)s

test =
    tox>=2.3.1
    pytest>=6.2.3
    pytest-cov>=2.11.1
    flake8>=3.9.1
    black

dev =
    flake8>=3.9.1
    black
    pre-commit>=2.12.1

doc =
    Cython
    Sphinx>=1.3.2
    numpydoc>=0.5.0
    sphinx-autobuild>=0.6.0
    pydata-sphinx-theme
    sphinx-markdown-tables
    sphinx_copybutton
    nbsphinx
    m2r2
